[tool.poetry]
name = "dbvacancy"
version = "0.1.0"
description = ""
authors = ["Дмитрий Кукуйский <kukuiski@gmail.com>"]
readme = "README.md"
packages = [{include = "dbvacancy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
dotenv = "^0.9.9"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
